--- a/code/templates/life-skills.html
+++ b/code/templates/life-skills.html
@@ -161,7 +161,7 @@
                                     </div>
                                     <p class="adjustable-text">Remember: Being independent means being aware. Taking five minutes to read your gas meter can save you money and give you peace of mind. You’ve got this!</p>
                                 </div>
-                                <blockquote>
+                                <blockquote class="custom-blockquote">
                                     <h4 class="c_head">If you notice a sudden spike in usage, there might be a leak—contact your gas provider immediately.</h4>
                                     <div class="author">HerBlossom</div>
                                 </blockquote>
@@ -176,7 +176,6 @@
                                 </div>
                             </div>
                             <div class="comment_inner  adjustable-text">
-                                <h2 class="c_head">4 Comments</h2>
                                 <ul class="comment_box list-unstyled">
                                     <li class="post_comment">
                                         <div class="media comment_author">
@@ -218,7 +217,7 @@
                                     </li>
                                     <li class="post_comment">
                                         <div class="media comment_author">
-                                            <img class="img_rounded" src="../static/img/blog-single/comment_01.jpg" alt="">
+                                            <img class="img_rounded" src="../static/img/blog-single/comment_04.jpg" alt="">
                                             <div class="media-body">
                                                 <div class="comment_info">
                                                     <h3>Douglas Lyphe</h3>
