--- a/code/templates/mental-health.html
+++ b/code/templates/mental-health.html
@@ -215,17 +215,17 @@
                                 </div>
                             </div>
                             <div class="comment_inner">
-                                <h2 class="c_head">3 Comment</h2>
+                                <h2 class="c_head">4 Featured Reviews</h2>
                                 <ul class="comment_box list-unstyled">
                                     <li class="post_comment">
                                         <div class="media comment_author">
                                             <img class="img_rounded" src="../static/img/blog-single/comment_01.jpg" alt="">
                                             <div class="media-body">
                                                 <div class="comment_info">
-                                                    <h3>Fletch Skinner</h3>
+                                                    <h3>GlowUpGinny</h3>
                                                     <div class="comment_date">July 3, 2020 at 2:14 pm</div>
                                                 </div>
-                                                <p>Cuppa the bee's knees the full monty bloke cockup pear shaped bubble and squeak lavatory naff, chip shop bodge burke do one have.!</p>
+                                                <p>Just did 10 squats and now my legs think I climbed Mount Everest.</p>
                                             </div>
                                         </div>
                                         <ul class="list-unstyled reply_comment">
@@ -234,10 +234,10 @@
                                                     <img class="img_rounded" src="../static/img/blog-single/comment_02.jpg" alt="">
                                                     <div class="media-body">
                                                         <div class="comment_info">
-                                                            <h3>Hans Down</h3>
+                                                            <h3>SassySara</h3>
                                                             <div class="comment_date">44 mins ago</div>
                                                         </div>
-                                                        <p>Dropped a clanger up the kyver easy peasy vagabond victoria sponge Charles tinkety tonk old fruit argy.!</p>
+                                                        <p>Wait till you try lunges… your stairs will become your mortal enemy 😩😂</p>
                                                     </div>
                                                 </div>
                                             </li>
@@ -246,10 +246,10 @@
                                                     <img class="img_rounded" src="../static/img/blog-single/comment_03.jpg" alt="">
                                                     <div class="media-body">
                                                         <div class="comment_info">
-                                                            <h3>Hans Down</h3>
+                                                            <h3>LazyLuna</h3>
                                                             <div class="comment_date">44 mins ago</div>
                                                         </div>
-                                                        <p>Dropped a clanger up the kyver easy peasy vagabond victoria sponge Charles tinkety tonk old fruit argy.!</p>
+                                                        <p>My legs refused to attend work today. I told them “same, bestie.”</p>
                                                     </div>
                                                 </div>
                                             </li>
@@ -257,13 +257,13 @@
                                     </li>
                                     <li class="post_comment">
                                         <div class="media comment_author">
-                                            <img class="img_rounded" src="../static/img/blog-single/comment_01.jpg" alt="">
+                                            <img class="img_rounded" src="../static/img/blog-single/comment_04.jpg" alt="">
                                             <div class="media-body">
                                                 <div class="comment_info">
-                                                    <h3>Chauffina Carr</h3>
-                                                    <div class="comment_date">04 mins ago</div>
+                                                    <h3>HealthyHannah</h3>
+                                                    <div class="comment_date">4 mins ago</div>
                                                 </div>
-                                                <p>Cuppa the bee's knees the full monty bloke cockup pear shaped bubble and squeak lavatory naff, chip shop bodge burke do one have.!</p>
+                                                <p>Tried early morning jogging today. I saw the sunrise! …and 3 dogs who all judged me.</p>
                                             </div>
                                         </div>
                                     </li>
@@ -323,10 +323,10 @@
                             <div class="widget about_widget">
                                 <div class="img"><img src="../static/img/blog-single/about_img.jpg" alt=""></div>
                                 <div class="text">
-                                    <a href="#">
-                                        <h3>Rodney Artichoke</h3>
+                                    <a>
+                                        <h3>James Bond</h3>
                                     </a>
-                                    <p>James Bond jolly good happy days smashing barney bonnet bits and bobs loo.!</p>
+                                    <p>The James Bond franchise focuses on the titular character, a fictional British Secret Service agent created in 1953 by writer Ian Fleming, who featured him in twelve novels and two short-story collections. </p>
                                 </div>
                             </div>
                             <div class="widget categorie_widget">
@@ -401,27 +401,27 @@
                                 <h4 class="c_head">Recent Comments</h4>
                                 <ul class="list-unstyled recent_comments">
                                     <li>
-                                        <h6><i class="icon_chat_alt"></i>Douglas Lyphe:</h6>
+                                        <h6><i class="icon_chat_alt"></i>Serena M.:</h6>
                                         <a href="#" class="text">
-                                            French squiffy pukka gosh nancy boy buggered, bog-standard.!
+                                            This article came just in time. I’ve been battling fatigue and didn’t realize that light physical activity could help so much. Thank you for the encouragement!
                                         </a>
                                     </li>
                                     <li>
-                                        <h6><i class="icon_chat_alt"></i>Hilary Ouse:</h6>
+                                        <h6><i class="icon_chat_alt"></i>Leila Tran:</h6>
                                         <a href="#" class="text">
-                                            Charles give us a bell butty blatant baking cakes cheesed off.
+                                            Really appreciated how you touched on the cultural barriers. As someone from a conservative background, it’s reassuring to know I’m not alone in this struggle.
                                         </a>
                                     </li>
                                     <li>
-                                        <h6><i class="icon_chat_alt"></i>Penny Tool:</h6>
+                                        <h6><i class="icon_chat_alt"></i>Nadia H.:</h6>
                                         <a href="#" class="text">
-                                            Starkers happy days bobby pardon me.
+                                            I live with chronic back pain and never thought exercise would help, but now I’m rethinking that. Gentle yoga might be worth a try.
                                         </a>
                                     </li>
                                     <li>
-                                        <h6><i class="icon_chat_alt"></i>Jackson Pot:</h6>
+                                        <h6><i class="icon_chat_alt"></i>Joan Keller:</h6>
                                         <a href="#" class="text">
-                                            Charles give us a bell butty blatant baking cakes cheesed off.
+                                            As a mom of two toddlers, I rarely get time for myself. I love the suggestion of turning playtime into exercise—feels doable!
                                         </a>
                                     </li>
                                 </ul>
