--- a/code/templates/useful-skills.html
+++ b/code/templates/useful-skills.html
@@ -222,17 +222,17 @@
                                 </div>
                             </div>
                             <div class="comment_inner">
-                                <h2 class="c_head">3 Comment</h2>
+                                <h2 class="c_head">3 Featured Reviews</h2>
                                 <ul class="comment_box list-unstyled">
                                     <li class="post_comment">
                                         <div class="media comment_author">
                                             <img class="img_rounded" src="../static/img/blog-single/comment_01.jpg" alt="">
                                             <div class="media-body">
                                                 <div class="comment_info">
-                                                    <h3>Fletch Skinner</h3>
+                                                    <h3>FixItFiona</h3>
                                                     <div class="comment_date">July 3, 2020 at 2:14 pm</div>
                                                 </div>
-                                                <p>Cuppa the bee's knees the full monty bloke cockup pear shaped bubble and squeak lavatory naff, chip shop bodge burke do one have.!</p>
+                                                <p>Buying my first toolkit last month made me feel oddly powerful 😂 Hung up all my shelves without calling my dad!</p>
                                             </div>
                                         </div>
                                         <ul class="list-unstyled reply_comment">
@@ -241,22 +241,10 @@
                                                     <img class="img_rounded" src="../static/img/blog-single/comment_02.jpg" alt="">
                                                     <div class="media-body">
                                                         <div class="comment_info">
-                                                            <h3>Hans Down</h3>
+                                                            <h3>RheaFromBKK</h3>
                                                             <div class="comment_date">44 mins ago</div>
                                                         </div>
-                                                        <p>Dropped a clanger up the kyver easy peasy vagabond victoria sponge Charles tinkety tonk old fruit argy.!</p>
-                                                    </div>
-                                                </div>
-                                            </li>
-                                            <li>
-                                                <div class="media comment_author">
-                                                    <img class="img_rounded" src="../static/img/blog-single/comment_03.jpg" alt="">
-                                                    <div class="media-body">
-                                                        <div class="comment_info">
-                                                            <h3>Hans Down</h3>
-                                                            <div class="comment_date">44 mins ago</div>
-                                                        </div>
-                                                        <p>Dropped a clanger up the kyver easy peasy vagabond victoria sponge Charles tinkety tonk old fruit argy.!</p>
+                                                        <p>Hahaha love that! I just bought a pink mini drill—10/10 would recommend 😎🔧</p>
                                                     </div>
                                                 </div>
                                             </li>
@@ -264,13 +252,13 @@
                                     </li>
                                     <li class="post_comment">
                                         <div class="media comment_author">
-                                            <img class="img_rounded" src="../static/img/blog-single/comment_01.jpg" alt="">
+                                            <img class="img_rounded" src="../static/img/blog-single/comment_03.jpg" alt="">
                                             <div class="media-body">
                                                 <div class="comment_info">
-                                                    <h3>Chauffina Carr</h3>
-                                                    <div class="comment_date">04 mins ago</div>
+                                                    <h3>GraceHeals</h3>
+                                                    <div class="comment_date">4 mins ago</div>
                                                 </div>
-                                                <p>Cuppa the bee's knees the full monty bloke cockup pear shaped bubble and squeak lavatory naff, chip shop bodge burke do one have.!</p>
+                                                <p>Thank you HerBlossom Team for making articles that actually speak to us. It’s not just about survival—it’s about confidence.</p>
                                             </div>
                                         </div>
                                     </li>
@@ -332,10 +320,10 @@
                             <div class="widget about_widget">
                                 <div class="img"><img src="../static/img/blog-single/about_img.jpg" alt=""></div>
                                 <div class="text">
-                                    <a href="#">
-                                        <h3>Rodney Artichoke</h3>
+                                    <a>
+                                        <h3>James Bond</h3>
                                     </a>
-                                    <p>James Bond jolly good happy days smashing barney bonnet bits and bobs loo.!</p>
+                                    <p>The James Bond franchise focuses on the titular character, a fictional British Secret Service agent created in 1953 by writer Ian Fleming, who featured him in twelve novels and two short-story collections. </p>
                                 </div>
                             </div>
                             <div class="widget categorie_widget">
@@ -367,7 +355,7 @@
                                     <span class="sr-only">Print</span>
                                 </a>
                             </div>                            <div class="widget recent_news_widget">
-                                <h4 class="c_head">Reacent News</h4>
+                                <h4 class="c_head">Recent News</h4>
                                 <div class="media recent_post_item">
                                     <img src="../static/img/blog-single/news_01.jpg" alt="">
                                     <div class="media-body">
@@ -409,27 +397,27 @@
                                 <h4 class="c_head">Recent Comments</h4>
                                 <ul class="list-unstyled recent_comments">
                                     <li>
-                                        <h6><i class="icon_chat_alt"></i>Douglas Lyphe:</h6>
+                                        <h6><i class="icon_chat_alt"></i>SafelyMe21:</h6>
                                         <a href="#" class="text">
-                                            French squiffy pukka gosh nancy boy buggered, bog-standard.!
+                                            I appreciate the reminder to carry personal safety tools.
                                         </a>
                                     </li>
                                     <li>
-                                        <h6><i class="icon_chat_alt"></i>Hilary Ouse:</h6>
+                                        <h6><i class="icon_chat_alt"></i>ShanThePlanner:</h6>
                                         <a href="#" class="text">
-                                            Charles give us a bell butty blatant baking cakes cheesed off.
+                                            I’m printing this list and sticking it on my fridge. Thanks HerBlossom Team!
                                         </a>
                                     </li>
                                     <li>
-                                        <h6><i class="icon_chat_alt"></i>Penny Tool:</h6>
+                                        <h6><i class="icon_chat_alt"></i>SoloAndStrong:</h6>
                                         <a href="#" class="text">
-                                            Starkers happy days bobby pardon me.
+                                            That part about keeping emergency food and water really hit me. I always forget to prep for those ‘just in case’ days.
                                         </a>
                                     </li>
                                     <li>
-                                        <h6><i class="icon_chat_alt"></i>Jackson Pot:</h6>
+                                        <h6><i class="icon_chat_alt"></i>MindfulMarie:</h6>
                                         <a href="#" class="text">
-                                            Charles give us a bell butty blatant baking cakes cheesed off.
+                                            Building micro-habits literally changed my life. I started with stretching every night—it’s small, but it grounds me.
                                         </a>
                                     </li>
                                 </ul>
