Update theme color and some templates

--- a/code/templates/useful-skills.html
+++ b/code/templates/useful-skills.html
@@ -354,7 +354,8 @@
                                     <i class="icon_printer" aria-hidden="true"></i>
                                     <span class="sr-only">Print</span>
                                 </a>
-                            </div>                            <div class="widget recent_news_widget">
+                            </div>
+                            <div class="widget recent_news_widget">
                                 <h4 class="c_head">Recent News</h4>
                                 <div class="media recent_post_item">
                                     <img src="../static/img/blog-single/news_01.jpg" alt="">
