--- a/code/static/css_new/style-hp.css
+++ b/code/static/css_new/style-hp.css
@@ -8970,14 +8970,16 @@ blockquote .author {
 }
 .comments_widget li .text {
   display: block;
-  background-color: #fbf0f3;
+  background-color: #ffced9;
   border: 1px solid #ed7595;
-  border-radius: 4px;
+  border-radius: 8px;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  color: #686d7d;
+  color: #000000;
+  padding: 3px;
 }
+
 .comments_widget li + li {
   margin-top: 23px;
 }
