--- a/code/static/css_test/style.css
+++ b/code/static/css_test/style.css
@@ -8987,14 +8987,14 @@ blockquote .author {
 }
 .comments_widget li .text {
   display: block;
-  background-color: #ffced9;
-  border: 1px solid #ed7595;
-  border-radius: 8px;
+  background-color: #f3f8f9;
+  border: 1px solid #e7edee;
+  border-radius: 4px;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  color: #000000;
-  padding: 3px;
+  color: #686d7d;
+  padding: 8px 24px;
 }
 .comments_widget li + li {
   margin-top: 23px;
