--- a/code/static/css_new/account.css
+++ b/code/static/css_new/account.css
@@ -157,3 +157,30 @@
 .modal-close-btn:hover {
   background-color: #5a6268;
 }
+
+.custom-modal-content {
+    padding: 20px; /* 增加内边距 */
+    border: none; /* 去掉边框 */
+    border-radius: 8px; /* 圆角效果 */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* 添加阴影 */
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#passwordModalMessage {
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 20px; /* 增加文字和按钮之间的间距 */
+    color: #333; /* 设置文字颜色 */
+    text-align: center; /* 居中对齐 */
+}
+
+.modal-body .btn {
+    width: 100px; /* 按钮宽度 */
+    text-align: center; /* 按钮文字居中 */
+}
