--- a/code/templates/forums.html
+++ b/code/templates/forums.html
@@ -614,7 +614,7 @@
                             <h3 class="f_title">Company</h3>
                             <ul class="list-unstyled link_list">
                                 <li><a href="/about-us">About Us</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="/contact-us">Contact Us</a></li>
 
 <!--                                <li><a href="#">Careers</a></li>-->
 <!--                                <li><a href="#">HerBlossom for Good</a></li>-->
