--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -423,7 +423,7 @@
                         <h4>Contact Us</h4>
                         <p>The team that created HerBlossom,
                             and the original intention of creating HerBlossom</p>
-                        <a href="/about-us" class="learn_btn c_blue">Go To Contact Us<i class="arrow_right"></i></a>
+                        <a href="/contact-us" class="learn_btn c_blue">Go To Contact Us<i class="arrow_right"></i></a>
                     </div>
 <!--                </div>-->
 <!--                <div class="col-sm-6">-->
