--- a/code/templates/contact.html
+++ b/code/templates/contact.html
@@ -175,7 +175,7 @@
                             <div class="time">
                                 Expected response time: <span>72 hours</span>
                             </div>
-                            <a href="/forum" class="doc_border_btn doc_border_btn_two">Ask The Community</a>
+                            <a href="/forum-topics" class="doc_border_btn doc_border_btn_two">Ask The Community</a>
                         </div>
                     </div>
                 </div>
