Update theme color and some templates

--- a/code/templates/register.html
+++ b/code/templates/register.html
@@ -31,10 +31,10 @@
                 <div class="spinner"></div>
                 <div class="text">
                     <img src="../static/img/spinner_logo.png" alt="">
-                    <h4><span>WELCOME TO YOUR WORLD!</span>></h4>
+                    <h4><span></span>HerBlossom</h4>
                 </div>
             </div>
-            <h2 class="head">Hi! It's HerBlossom!</h2>
+            <h2 class="head">WELCOME TO YOUR WORLD!</h2>
             <p></p>
         </div>
     </div>
