--- a/code/templates/index.html
+++ b/code/templates/index.html
@@ -124,19 +124,19 @@
             <div class="carousel-container" style="margin-top: 20px;">
                 <div class="carousel-slide">
                     <div class="carousel-item">
-                        <a href="#">
+                        <a href="/blog">
                             <img src="../static/img/Blog.png" alt="Blog">
                             <h3>Blog</h3>
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="#">
+                        <a href="/forum-topics">
                             <img src="../static/img/Forum-2.png" alt="Forum">
                             <h3>Forum</h3>
                         </a>
                     </div>
                     <div class="carousel-item">
-                        <a href="#">
+                        <a href="/job-recommendation">
                             <img src="../static/img/Job.jpg" alt="Job Recommendation">
                             <h3>Job Recommendation</h3>
                         </a>
