--- a/code/templates/forum-single.html
+++ b/code/templates/forum-single.html
@@ -420,7 +420,9 @@ font-family: 'Dancing Script', cursive;
                         </nav>
                     </div>
                     <div class="col-sm-5">
-                        <span class="date"><i class="icon_clock_alt"></i>/span>
+                        <span class="date">
+                            <i class="icon_clock_alt"></i>
+                        </span>
                     </div>
                 </div>
             </div>
