--- a/code/templates/Account.html
+++ b/code/templates/Account.html
@@ -23,7 +23,7 @@
     <!--    user change their information css-->
 <!--    <link rel="stylesheet" href="../static/css/style1.css">-->
     <link rel="stylesheet" href="../static/css_new/account.css">
-    <title>Account</title>
+    <title>Profile</title>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example3" data-offset="86" data-scroll-animation="true" class="doc">
@@ -385,7 +385,7 @@
                     <div class="col-sm-7">
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="Account.html">Account</a></li>
+                                <li class="breadcrumb-item"><a href="/profile">Profile</a></li>
 <!--                                <li class="breadcrumb-item"><a href="#">Docs</a></li>-->
 <!--                                <li class="breadcrumb-item active" aria-current="page">HerBlossom WordPress Theme</li>-->
                             </ol>
@@ -486,8 +486,8 @@
                             <div class="caniuse">
                                 <div class="shortcode_title">
 <!--                                    edit the main content of Account here-->
-                                    <h1>Account</h1>
-                                    <p><span>Welcome to HerBlossom !</span> You can edit your Account information here.</p>
+                                    <h1>Profile</h1>
+                                    <p><span>Welcome to HerBlossom !</span> You can edit your Profile information here.</p>
                                 </div>
 
                                 <!-- Button to return to the home page -->
